# logiciel_s6

./: LICENSE  pyproject.toml
logiciel_s6/logiciel_s6_project/: db.sqlite3  manage.py
logiciel_s6/logiciel_s6_project/IS/: urls.py  views.py
logiciel_s6/logiciel_s6_project/LTV/: apps.py  urls.py  views.py
logiciel_s6/logiciel_s6_project/PN/: apps.py  urls.py  views.py
logiciel_s6/logiciel_s6_project/S6/: apps.py  urls.py  views.py
logiciel_s6/logiciel_s6_project/S9/: apps.py  urls.py  views.py
logiciel_s6/logiciel_s6_project/TTx/: apps.py  urls.py  views.py
logiciel_s6/logiciel_s6_project/dashboard/: urls.py  views.py
logiciel_s6/logiciel_s6_project/info_base_chantier/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  views.py
logiciel_s6/logiciel_s6_project/info_base_chantier/migrations/: 0001_initial.py  0002_info_chantier_nom_chantier.py
logiciel_s6/logiciel_s6_project/logiciel_s6_project/: asgi.py  settings.py  urls.py  wsgi.py
logiciel_s6/logiciel_s6_project/templates/: base.html  index.html
logiciel_s6/logiciel_s6_project/templates/IS/: index.html
logiciel_s6/logiciel_s6_project/templates/LTV/: index.html
logiciel_s6/logiciel_s6_project/templates/PN/: index.html
logiciel_s6/logiciel_s6_project/templates/S6/: index.html
logiciel_s6/logiciel_s6_project/templates/S9/: index.html
logiciel_s6/logiciel_s6_project/templates/TTx/: index.html
logiciel_s6/logiciel_s6_project/templates/dashboard/: index.html
logiciel_s6/logiciel_s6_project/templates/info_base_chantier/: index.html
tests/: test_logiciel_s6.py
(+16 files in other folders)
